More links for the accessibility statement

--- a/app/views/accessibility-statement/index.html
+++ b/app/views/accessibility-statement/index.html
@@ -22,7 +22,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <p class="govuk-body">
-        This service is part of the wider GOV.UK website. There’s a separate accessibility statement for the main GOV.UK website.
+        This service is part of the wider GOV.UK website. There’s a separate <a href="https://www.gov.uk/help/accessibility-statement" class="govuk-link">accessibility statement for the main GOV.UK website</a>.
       </p>
 
       <p class="govuk-body">
@@ -74,7 +74,7 @@
       </h2>
 
       <p class="govuk-body">
-        This service is partially compliant with the Web Content Accessibility Guidelines version 2.1 AA standard.
+        This service is partially compliant with the <a href="https://www.w3.org/TR/WCAG21/" class="govuk-link">Web Content Accessibility Guidelines version 2.1</a> AA standard.
       </p>
 
       <p class="govuk-body">
@@ -119,7 +119,7 @@
       </h2>
 
       <p class="govuk-body">
-        We’re always looking to improve the accessibility of this service. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email us at: pcs@planninginspectorate.gov.uk
+        We’re always looking to improve the accessibility of this service. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, <a href="pcs@planninginspectorate.gov.uk">email us at pcs@planninginspectorate.gov.uk</a>
       </p>
 
       <h2 class="govuk-heading-m">
@@ -127,7 +127,7 @@
       </h2>
 
       <p class="govuk-body">
-        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, contact the Equality Advisory and Support Service (EASS).
+        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, contact the <a href="https://www.equalityadvisoryservice.com/" class="govuk-link">Equality Advisory and Support Service (EASS)</a>.
       </p>
 
       <h2 class="govuk-heading-m">
@@ -160,31 +160,31 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          Some pages are not coded in the right way, meaning that navigating with assistive technology could cause errors. This does not comply with WCAG Level A 2.1: 1.3.1 (Info and Relationships). This will be fixed by December 2022.
+          Some pages are not coded in the right way, meaning that navigating with assistive technology could cause errors. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/info-and-relationships" class="govuk-link">WCAG Level A 2.1: 1.3.1 (Info and Relationships)</a>. This will be fixed by December 2022.
         </li>
         <li>
-          When navigating using Dragon Naturally Speaking, users cannot upload files using voice commands. This means the content within the accordion cannot be accessed. This does not comply with WCAG Level A 2.1: 4.1.2 (Name, Role, Value). This will be fixed by December 2022
+          When navigating using Dragon Naturally Speaking, users cannot upload files using voice commands. This means the content within the accordion cannot be accessed. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/name-role-value" class="govuk-link">WCAG Level A 2.1: 4.1.2 (Name, Role, Value)</a>. This will be fixed by December 2022
         </li>
         <li>
-          When navigating using Dragon Naturally Speaking, the accordion cannot be expanded using voice commands. This means the content within the accordion cannot be accessed. This does not comply with WCAG Level A 2.1: 4.1.2 (Name, Role, Value). This will be fixed by December 2022
+          When navigating using Dragon Naturally Speaking, the accordion cannot be expanded using voice commands. This means the content within the accordion cannot be accessed. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/name-role-value" class="govuk-link">WCAG Level A 2.1: 4.1.2 (Name, Role, Value)</a>. This will be fixed by December 2022
         </li>
         <li>
-          When navigating with assistive technology on iOS devices users are taken to the top of the page. This does not comply with WCAG Level A 2.1: 4.1.2 (Name, Role, Value). This will be fixed by December 2022.
+          When navigating with assistive technology on iOS devices users are taken to the top of the page. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/name-role-value" class="govuk-link">WCAG Level A 2.1: 4.1.2 (Name, Role, Value)</a>. This will be fixed by December 2022.
         </li>
         <li>
-          When navigating using TalkBack on Android devices, the screen reader reads the word ‘section’ before the main content. This does not comply with WCAG Level A 2.1: 4.1.2 (Name, Role, Value). This will be fixed by December 2022.
+          When navigating using TalkBack on Android devices, the screen reader reads the word ‘section’ before the main content. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/name-role-value" class="govuk-link">WCAG Level A 2.1: 4.1.2 (Name, Role, Value)</a>. This will be fixed by December 2022.
         </li>
         <li>
-          When navigating using TalkBack on Android devices, the screen reader reads the question title after scrolling past the ‘change’ link. This does not comply with WCAG Level A 2.1: 4.1.2 (Name, Role, Value). This will be fixed by December 2022.
+          When navigating using TalkBack on Android devices, the screen reader reads the question title after scrolling past the ‘change’ link. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/name-role-value" class="govuk-link">WCAG Level A 2.1: 4.1.2 (Name, Role, Value)</a>. This will be fixed by December 2022.
         </li>
         <li>
-          Some pages are not coded in the right way, meaning that navigating with assistive technology could be difficult. This does not comply with WCAG Level A 2.1: 4.1.1 (Parsing). This will be fixed by December 2022.
+          Some pages are not coded in the right way, meaning that navigating with assistive technology could be difficult. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/parsing.html" class="govuk-link">WCAG Level A 2.1: 4.1.1 (Parsing)</a>. This will be fixed by December 2022.
         </li>
         <li>
-          Autocomplete is not present in some form fields. This means the form files will need to be filled in manually, which can cause difficulty for people with access needs. This does not comply with WCAG Level AA 2.1: 1.3.5 (Identify Input Purpose). This will be fixed by December 2022.
+          Autocomplete is not present in some form fields. This means the form files will need to be filled in manually, which can cause difficulty for people with access needs. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/identify-input-purpose.html" class="govuk-link">WCAG Level A 2.1: 1.3.5 (Identify Input Purpose)</a>. This will be fixed by December 2022.
         </li>
         <li>
-          On some pages the CSS outline or border can make it difficult to identify if the element is in focus. This does not comply with WCAG Level AA 2.1: 2.4.7 (Focus Visible). This will be fixed by December 2022.
+          On some pages the CSS outline or border can make it difficult to identify if the element is in focus. This does not comply with <a href="https://www.w3.org/WAI/WCAG21/Understanding/focus-visible.html" class="govuk-link">WCAG Level AA 2.1: 2.4.7 (Focus Visible)</a>. This will be fixed by December 2022.
         </li>
       </ul>
 
