--- a/app/views/enforcement-statement/v2/update/reasons-c.html
+++ b/app/views/enforcement-statement/v2/update/reasons-c.html
@@ -24,11 +24,10 @@
     <div class="govuk-grid-column-three-quarters">
       <form method="post">
 
-        {{ govukCharacterCount({
+        {{ govukTextarea({
           name: 'statement-ground-c',
           id: 'statement-ground-c',
           value: data['statement-ground-c'],
-          maxwords: '1000',
           rows: 15,
           label: {
             html: 'What are your reasons for choosing Ground C?',
