--- a/app/views/enforcement/v7/grounds/reasons-b.html
+++ b/app/views/enforcement/v7/grounds/reasons-b.html
@@ -27,11 +27,10 @@
     <div class="govuk-grid-column-three-quarters">
       <form method="post">
 
-        {{ govukCharacterCount({
+        {{ govukTextarea({
           name: 'ground-b',
           id: 'ground-b',
           value: data['ground-b'],
-          maxwords: '1000',
           rows: 15,
           label: {
             html: 'What are your reasons for choosing Ground B?',
