--- a/app/views/enforcement-listed-building/v1/grounds/groundD.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundD.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Tell us your reasons for choosing Ground D" %}
+{% set title = "Your reasons for choosing Ground D" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -41,24 +41,15 @@
           That works to the building were urgently necessary in the interests of safety or health or for the preservation of the building, that it was not practicable to secure safety or health or, as the case may be, the preservation of the building by works of repair or works for affording temporary support or shelter, and that the works carried out were limited to the minimum measures immediately necessary.
         </div>
 
-        <p class="govuk-hint">
+        <p class="govuk-body">
           You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
         <p>
 
-        <p class="govuk-hint">
+        <p class="govuk-body">
           You can upload documents to support your appeal later.
         <p>
 
-        <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="3000">
-
-          <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-d-reasons" name="enforcement-ground-d-reasons" rows="5" aria-describedby="enforcement-ground-d-reasons-hint"></textarea>
-
-          <div id="enforcement-ground-d-reasons-info" class="govuk-hint govuk-character-count__message">
-            <!-- You can enter up to 3,000 words -->
-          </div>
-
-        </div>
-
+        <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-d-reasons" name="enforcement-ground-d-reasons" rows="5" aria-describedby="enforcement-ground-d-reasons-hint"></textarea>
 
         <div class="govuk-button-group">
 
