--- a/app/views/enforcement-listed-building/v1/grounds/grounds.html
+++ b/app/views/enforcement-listed-building/v1/grounds/grounds.html
@@ -78,7 +78,47 @@
                   Ground E: That listed building consent ought to be granted for the works, or that any relevant condition of such consent which has been granted ought to be discharged, or different conditions substituted.
                 </label>
               </div>
-                
+
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="grounds-6" name="grounds-6" type="checkbox" value="groundE">
+                <label class="govuk-label govuk-checkboxes__label" for="grounds-6">
+                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
+                  Ground F: Grounds for F
+                </label>
+              </div>
+
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="grounds-7" name="grounds-7" type="checkbox" value="groundE">
+                <label class="govuk-label govuk-checkboxes__label" for="grounds-7">
+                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
+                  Ground G: Grounds for G
+                </label>
+              </div>
+
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="grounds-8" name="grounds-8" type="checkbox" value="groundE">
+                <label class="govuk-label govuk-checkboxes__label" for="grounds-8">
+                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
+                  Ground H: Grounds for H
+                </label>
+              </div>
+
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="grounds-9" name="grounds-9" type="checkbox" value="groundE">
+                <label class="govuk-label govuk-checkboxes__label" for="grounds-9">
+                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
+                  Ground I: Grounds for I
+                </label>
+              </div>
+
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="grounds-10" name="grounds-10" type="checkbox" value="groundE">
+                <label class="govuk-label govuk-checkboxes__label" for="grounds-10">
+                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
+                  Ground J: Grounds for J
+                </label>
+              </div>
+
             </div>
 
           </fieldset>
@@ -97,6 +137,13 @@
           }) }}
 
         </div>
+
+        <!-- {{ govukButton({
+          text: "Save and continue"
+        }) }}
+
+        <br><a href="#" class="govuk-link govuk-link--no-visited-state">Save and come back later</a> -->
+
 
       </form>
 
