--- a/app/views/enforcement-listed-building/v1/appeal-site/site-visibility.html
+++ b/app/views/enforcement-listed-building/v1/appeal-site/site-visibility.html
@@ -51,6 +51,9 @@
               classes: "govuk-fieldset__legend--l"
             }
           },
+          hint: {
+            text: "Tell us if the land or property is visible from a public road in case an Inspector needs to carry out a visit."
+          },
           items: [
             {
               value: "Yes",
