--- a/app/views/enforcement-listed-building/v1/grounds/groundC.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundC.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Tell us your reasons for choosing Ground C" %}
+{% set title = "Your reasons for choosing Ground C" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -41,23 +41,15 @@
           That those matters (if they occured) do not constitute such a contravention.
         </div>
 
-        <p class="govuk-hint">
+        <p class="govuk-body">
           You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
         <p>
 
-        <p class="govuk-hint">
+        <p class="govuk-body">
           You can upload documents to support your appeal later.
         <p>
 
-        <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="3000">
-
-          <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-c-reasons" name="enforcement-ground-c-reasons" rows="5" aria-describedby="enforcement-ground-c-reasons-hint"></textarea>
-
-          <div id="enforcement-ground-c-reasons-info" class="govuk-hint govuk-character-count__message">
-            <!-- You can enter up to 3,000 words -->
-          </div>
-
-        </div>
+        <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-c-reasons" name="enforcement-ground-c-reasons" rows="5" aria-describedby="enforcement-ground-c-reasons-hint"></textarea>
 
         <div class="govuk-button-group">
 
