--- a/app/views/enforcement-listed-building/v1/grounds/groundE.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundE.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Tell us your reasons for choosing Ground E" %}
+{% set title = "Your reasons for choosing Ground E" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -41,23 +41,15 @@
           That listed building consent ought to be granted for the works, or that any relevant condition of such consent which has been granted ought to be discharged, or different conditions substituted.
         </div>
 
-        <p class="govuk-hint">
+        <p class="govuk-body">
           You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
         <p>
 
-        <p class="govuk-hint">
+        <p class="govuk-body">
           You can upload documents to support your appeal later.
         <p>
 
-        <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="3000">
-
-          <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-e-reasons" name="enforcement-ground-e-reasons" rows="5" aria-describedby="enforcement-ground-e-reasons-hint"></textarea>
-
-          <div id="enforcement-ground-e-reasons-info" class="govuk-hint govuk-character-count__message">
-            <!-- You can enter up to 3,000 words -->
-          </div>
-
-        </div>
+        <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-e-reasons" name="enforcement-ground-e-reasons" rows="5" aria-describedby="enforcement-ground-e-reasons-hint"></textarea>
 
         <div class="govuk-button-group">
 
