--- a/app/views/enforcement/v7/appeal-site/site-visibility.html
+++ b/app/views/enforcement/v7/appeal-site/site-visibility.html
@@ -30,46 +30,7 @@
           Tell us about the appeal site
         </span>
 
-        {% set infoHtml %}
-          {{ govukTextarea({
-            id: "enforcement-site-visibility-details",
-            name: "enforcement-site-visibility-details",
-            label: {
-              text: "How is visibility restricted?"
-            },
-            value: data["enforcement-site-visibility-details"]
-          }) }}
-        {% endset -%}
-
-        {{ govukRadios({
-          idPrefix: "enforcement-site-visibility",
-          name: "enforcement-site-visibility",
-          fieldset: {
-            legend: {
-              text: "Is the site visible from a public road?",
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--l"
-            }
-          },
-          hint: {
-            text: "Tell us if the land or property is visible from a public road in case an Inspector needs to carry out a visit."
-          },
-          items: [
-            {
-              value: "Yes",
-              text: "Yes",
-              checked: checked("enforcement-site-visibility", "Yes")
-            },
-            {
-              value: "No",
-              text: "No",
-              checked: checked("enforcement-site-visibility", "No"),
-              conditional: {
-                html: infoHtml
-              }
-            }
-          ]
-        }) }}
+        {% include "includes/enforcement/site-visibility.html" %}
 
         <div class="govuk-button-group">
           {{ govukButton({
