LB enforcement appeals, content updates

--- a/app/views/enforcement-listed-building/v1/grounds/groundD.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundD.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Your reasons for choosing Ground D" %}
+{% set title = "Your reasons for Ground D" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -38,15 +38,19 @@
         </label>
 
         <div class="govuk-inset-text">
-          That works to the building were urgently necessary in the interests of safety or health or for the preservation of the building, that it was not practicable to secure safety or health or, as the case may be, the preservation of the building by works of repair or works for affording temporary support or shelter, and that the works carried out were limited to the minimum measures immediately necessary.
+          Tell us why the building work was urgent and necessary. For example, list the reasons for health and safety or concerns about preservation of the building.
         </div>
 
         <p class="govuk-body">
-          You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
+          Give facts to support your argument.
         <p>
 
         <p class="govuk-body">
-          You can upload documents to support your appeal later.
+          You do not need to repeat the local planning authority’s reasons for issuing the enforcement notice.
+        <p>
+
+        <p class="govuk-body">
+          You can upload documents to support your appeal or provide a statement later. 
         <p>
 
         <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-d-reasons" name="enforcement-ground-d-reasons" rows="5" aria-describedby="enforcement-ground-d-reasons-hint"></textarea>
