--- a/app/views/enforcement-listed-building/v1/grounds/groundE.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundE.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Your reasons for choosing Ground E" %}
+{% set title = "Your reasons for Ground E" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -37,16 +37,20 @@
           {{ title  }}
         </label>
 
-        <div class="govuk-inset-text">
-          That listed building consent ought to be granted for the works, or that any relevant condition of such consent which has been granted ought to be discharged, or different conditions substituted.
+        <div class="govuk-body">
+          Tell us why planning permission should be granted. Explain the reasons why you disagree with each of the reasons in the notice.
         </div>
 
         <p class="govuk-body">
-          You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
+          Give facts to support your argument.
         <p>
 
         <p class="govuk-body">
-          You can upload documents to support your appeal later.
+          You do not need to repeat the local planning authority’s reasons for issuing the enforcement notice.
+        <p>
+
+        <p class="govuk-body">
+          You can upload documents to support your appeal or provide a statement later.
         <p>
 
         <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-e-reasons" name="enforcement-ground-e-reasons" rows="5" aria-describedby="enforcement-ground-e-reasons-hint"></textarea>
