--- a/app/views/enforcement-listed-building/v1/grounds/grounds.html
+++ b/app/views/enforcement-listed-building/v1/grounds/grounds.html
@@ -37,6 +37,20 @@
                 {{ title }}
               </h1>
             </legend>
+<!-- 
+            {{ data['grounds-1'] }}<br>
+            {{ data['grounds-2'] }}<br>
+            {{ data['grounds-3'] }}<br>
+            {{ data['grounds-4'] }}<br>
+            {{ data['grounds-5'] }}<br>
+            {{ data['grounds-6'] }}<br>
+            {{ data['grounds-7'] }}<br>
+            {{ data['grounds-8'] }}<br>
+            {{ data['grounds-9'] }}<br>
+            {{ data['grounds-10'] }}<br>
+            {{ data['grounds-11'] }}<br>
+            {{ data['grounds-12'] }}<br>
+            {{ data['grounds-13'] }}<br> -->
 
             <p class="govuk-hint">
               Select all that apply.
@@ -46,76 +60,73 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-1" name="grounds-1" type="checkbox" value="groundA">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-1">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground A</span> -->
-                  Ground A: That the building is not of special architectural or historic interest.
+                  Ground A: The building does not have special historic or architectural interest.
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-2" name="grounds-2" type="checkbox" value="groundB">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-2">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground B</span> -->
-                  Ground B: That the matters alleged to constitute a contravention of section 9(1) or (2) have not occured.
+                  Ground B: The alleged breach of listed building planning permission has not happened.
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-3" name="grounds-3" type="checkbox" value="groundC">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-3">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground C</span> -->
-                  Ground C: That those matters (if they occured) do not constitute such a contravention.
+                  Ground C: Planning permission is not needed.
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-4" name="grounds-4" type="checkbox" value="groundD">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-4">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground D</span> -->
-                  Ground D: That works to the building were urgently necessary in the interests of safety or health or for the preservation of the building, that it was not practicable to secure safety or health or, as the case may be, the preservation of the building by works of repair or works for affording temporary support or shelter, and that the works carried out were limited to the minimum measures immediately necessary.
+                  Ground D: The building work was urgent and necessary for its preservation or health and safety.
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-5" name="grounds-5" type="checkbox" value="groundE">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-5">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
-                  Ground E: That listed building consent ought to be granted for the works, or that any relevant condition of such consent which has been granted ought to be discharged, or different conditions substituted.
+                  Ground E: Planning permission should be granted.
                 </label>
               </div>
 
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-6" name="grounds-6" type="checkbox" value="groundE">
+                <input class="govuk-checkboxes__input" id="grounds-6" name="grounds-6" type="checkbox" value="groundF">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-6">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
-                  Ground F: Grounds for F
+                  Ground F: Copies of the enforcement notice were not legally served to the right people.
                 </label>
               </div>
 
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-7" name="grounds-7" type="checkbox" value="groundE">
+                <input class="govuk-checkboxes__input" id="grounds-7" name="grounds-7" type="checkbox" value="groundG">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-7">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
-                  Ground G: Grounds for G
+                  Ground G: The steps to restore the building to its condition before the work was carried out are excessive.
                 </label>
               </div>
 
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-8" name="grounds-8" type="checkbox" value="groundE">
+                <input class="govuk-checkboxes__input" id="grounds-8" name="grounds-8" type="checkbox" value="groundH">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-8">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
-                  Ground H: Grounds for H
+                  Ground H: I need more time to comply with the enforcement notice.
                 </label>
               </div>
 
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-9" name="grounds-9" type="checkbox" value="groundE">
+                <input class="govuk-checkboxes__input" id="grounds-9" name="grounds-9" type="checkbox" value="groundI">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-9">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
-                  Ground I: Grounds for I
+                  Ground I: The steps to restore the building will impact on its usage.
                 </label>
               </div>
 
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-10" name="grounds-10" type="checkbox" value="groundE">
+                <input class="govuk-checkboxes__input" id="grounds-10" name="grounds-10" type="checkbox" value="groundJ">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-10">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
-                  Ground J: Grounds for J
+                  Ground J: The steps to reduce the damage of the work carried out are excessive.
+                </label>
+              </div>
+
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="grounds-11" name="grounds-11" type="checkbox" value="groundK">
+                <label class="govuk-label govuk-checkboxes__label" for="grounds-11">
+                  Ground K: The steps to comply with planning permission are excessive.
                 </label>
               </div>
 
@@ -143,7 +154,6 @@
         }) }}
 
         <br><a href="#" class="govuk-link govuk-link--no-visited-state">Save and come back later</a> -->
-
 
       </form>
 
