--- a/app/views/enforcement-listed-building/v1/grounds/groundC.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundC.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Your reasons for choosing Ground C" %}
+{% set title = "Your reasons for Ground C" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -37,16 +37,20 @@
           {{ title  }}
         </label>
 
-        <div class="govuk-inset-text">
-          That those matters (if they occured) do not constitute such a contravention.
+        <div class="govuk-body">
+          Tell us why planning permission is not needed.  Show how the work has not affected the character of the building or that the work was on another part of the building, not covered by listed building status.
         </div>
 
         <p class="govuk-body">
-          You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
+          Give facts to support your argument.
         <p>
 
         <p class="govuk-body">
-          You can upload documents to support your appeal later.
+          You do not need to repeat the local planning authority’s reasons for issuing the enforcement notice.
+        <p>
+
+        <p class="govuk-body">
+          You can upload documents to support your appeal or provide a statement later.
         <p>
 
         <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-c-reasons" name="enforcement-ground-c-reasons" rows="5" aria-describedby="enforcement-ground-c-reasons-hint"></textarea>
