--- a/app/views/enforcement-listed-building/v1/appeal-site/postcode-address.html
+++ b/app/views/enforcement-listed-building/v1/appeal-site/postcode-address.html
@@ -25,7 +25,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="site-visibility" method="post">
+      <form method="post">
 
         <span class="govuk-caption-l">
           Tell us about the appeal site
