--- a/app/views/enforcement-listed-building/v1/appeal-site/site-occupation.html
+++ b/app/views/enforcement-listed-building/v1/appeal-site/site-occupation.html
@@ -26,7 +26,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="other-appeals" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Tell us about the appeal site
