--- a/app/views/enforcement-listed-building/v1/confirmation.html
+++ b/app/views/enforcement-listed-building/v1/confirmation.html
@@ -27,7 +27,7 @@
         titleText: "Appeal submitted"
       }) }}
 
-      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+      <!-- <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible"> -->
 
       <p class="govuk-body">
         We’ve sent you a confirmation email with a link to download a copy of your appeal.
@@ -46,7 +46,7 @@
       </p>
 
     </div>
-  
+
 
   </div>
 
