Fixes to LB enforcement appeal journey

--- a/app/views/enforcement-listed-building/v1/procedure/inquiry-days.html
+++ b/app/views/enforcement-listed-building/v1/procedure/inquiry-days.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="inquiry-witnesses" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Tell us how you would prefer us to decide your appeal
@@ -36,7 +36,7 @@
       {{ govukInput({
         id: "enforcement-inquiry-days",
         name: "enforcement-inquiry-days",
-        classes: "govuk-input--width-3",
+        classes: "govuk-input--width-2",
         label: {
           text: title,
           classes: "govuk-label--l",
