Enforcement reference on confirmation screen for LBEs and appeal late statement journey

--- a/app/views/enforcement-listed-building/v1/confirmation.html
+++ b/app/views/enforcement-listed-building/v1/confirmation.html
@@ -24,7 +24,8 @@
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleText: "Appeal submitted"
+        titleHtml: 'Appeal submitted',
+        html: 'Your reference number<br><strong>ENF13579F</strong>'
       }) }}
 
       <!-- <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible"> -->
