--- a/app/views/enforcement-statement/v2/update/confirmation.html
+++ b/app/views/enforcement-statement/v2/update/confirmation.html
@@ -5,7 +5,8 @@
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleText: 'Appeal statement submitted'
+        titleHtml: 'Appeal submitted',
+        html: 'Your reference number<br><strong>ENF13579F</strong>'
       }) }}
 
       <p>We&rsquo;ve sent you a confirmation email.</p>
